# xfce4-netgraph-plugin

./: .gitignore  AUTHORS  NEWS  README  THANKS  TODO  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  configure.c  configure.h  dialogs.c  dialogs.h  netdev.c  netdev.h  netdev_linux.c  netgraph.c  netgraph.desktop.in  netgraph.h  os_linux.c  prefs-dialog.glade
po/: POTFILES.in  de.po  ro.po  xfce4-netgraph-plugin.pot
